
New in 6.2 version:

  * SCAN functional with libxc v.3; bands with meta-GGA can be computed
   (Davide Ceresoli)

  * EXX with localization (experimental)

  * Stress calculation is enabled in ESM
    “starting_charge” option added to SYSTEM namelist

  * Unscreened hybrid vdW-DF (JCP 146, 234106 (2017), contributed by 
    Per Hyldgaard and Jeff Neaton

Fixed in 6.2 version

  * NEB + EXX works again (r13851)

  * Under some circumstances (k-points, reduced ecutfock, other unclear  
    reasons), EXX with reduced cutoff wasn't giving accurate results, 
    due to a mismatch between the ordering of G-vectors in the original 
    FFT grid and in the grid for ecutfock. Also fixed: incorrect indices
    of -G (used in Gamma-only case) when nr1 /= nr2 (r13833)

  * In variable-cell EXX, G-vectors used in the FFT of 1/|r-r'| should be
    rescaled as well (courtesy Satomichi Nisihara) (r13817)

  * Bug in DFPT with tetrahedra and in "fermisurfer", plus some extensions
    to el-ph with tetrahedra (Mitsuaki Kawamura) (r13806).

  * EXX with k-points and pool parallelization was occasionally crashing
    due to questionable custom FFT grid initialization (r13728+r13835)

  * ESM energy and forces for 'bc2' case and nonzero esm_efield were not
    correct (r13727). Also: problem with restart in NEB with ESM fixed

  * __USE_3D_FFT was broken since v.6.0 (r13700, r13706)

  * Some constants in the definition of PBE functionals were truncated to 
    6 significant digits. While not a bug, this could lead to tiny differences
    with respect to previous results and other XC implementations (r13592)

  * Examples for magnetic anisotropy with force theorem were not properly
    updated (r13534)

  * Orthogonalization of Hubbard manifold in LDA+U with non-default values
    of U_projection_type was not properly done in v.6.0 and 6.1 (r13529)
    Thanks to Andrea Ferretti and Mike Atambo for fixing this.
