@@ -191,8 +191,8 @@ contributed in some way or another at some stage, follows:
   {\AA}ke Sandgren, Audrius Alkauskas, Alain Allouche, Francesco Antoniella,
   Uli Aschauer,  Francesca Baletto, Gerardo Ballabio, Mauro Boero,
   Scott Brozell, Claudia Bungaro, Paolo Cazzato, Gabriele Cipriani,
-  Jiayu Dai, Cesar Da Silva, Alberto Debernardi, Gernot Deinzer,
-  Alin Marin Elena, Francesco Filipponi, Prasenjit Ghosh,
+  Jiayu Dai, Stefano Dal Forno, Cesar Da Silva, Alberto Debernardi,
+  Gernot Deinzer, Alin Marin Elena, Francesco Filipponi, Prasenjit Ghosh,
   Marco Govoni, Thomas Gruber, Martin Hilgeman, Yosuke Kanai, Konstantin Kudin,
   Nicolas Lacorne, Hyungjun Lee, Stephane Lefranc, Sergey Lisenkov, Kurt Maeder,
   Andrea Marini, Giuseppe Mattioli, Nicolas Mounet, William Parker,
